Add ssh keys as part of the provisioning

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,9 @@ pnda_env*.sh
 cli/logs/*cloud-formation-template*.json
 cli/logs/*cloud-formation-parameters*.json
 tf-*/
+platform-certificates/*.*
+platform-certificates/knox/*
+!platform-certificates/knox/README.md
+platform-certificates/haproxy/*
+!platform-certificates/haproxy/README.md
+terraform/scripts/*.pub
